--- a/src/pages/index.njk
+++ b/src/pages/index.njk
@@ -1,4 +1,5 @@
 {% extends "layout-default.njk" %}
+{% set pageName = 'index' %}
 {% set title = 'Blank Page' %}
 {% block content %}
           <h1>Dashboard</h1>
@@ -25,7 +26,7 @@
               <span class="text-muted">Something else</span>
             </div>
           </section>
-
+asdasddsa
           <h2>Section title</h2>
           <div class="table-responsive">
             <table class="table table-striped">
