Add on the fly template

--- a/src/app/components/header/collapse/collapse.njk
+++ b/src/app/components/header/collapse/collapse.njk
@@ -1,5 +1,5 @@
 <div class="header-block header-block-collapse d-lg-none d-xl-none" >
-	<button class="collapse-btn" id="sidebar-collapse-btn" data-component="collapseButton">
+	<button class="collapse-btn" id="sidebar-collapse-btn" {{data.component}}="CollapseButton">
 		<i class="fa fa-bars"></i>
 	</button>
 </div>
