--- a/src/app/components/sidebar/_wrapper/sidebar-default.njk
+++ b/src/app/components/sidebar/_wrapper/sidebar-default.njk
@@ -9,5 +9,5 @@
   {% include "../customize/customize.njk" %}
 
 </aside>
-<div class="sidebar-overlay" id="sidebar-overlay" data-component="overlay"></div>
+<div class="sidebar-overlay" id="sidebar-overlay" {{data.component}}="Overlay"></div>
 <div class="sidebar-mobile-menu-handle" id="sidebar-mobile-menu-handle"></div>
