--- a/src/app/components/sidebar/customize/customize.njk
+++ b/src/app/components/sidebar/customize/customize.njk
@@ -1,5 +1,5 @@
 <footer class="sidebar-footer">
-  <ul class="sidebar-menu metismenu" id="customize-menu" {{data.component}}="sidebarMenu" {{data.options}}='{"decepticon": "autobot"}'>
+  <ul class="sidebar-menu metismenu" id="customize-menu" {{data.component}}="SidebarMenu" {{data.options}}='{"decepticon": "autobot"}'>
     <li>
       <ul>
         <li class="customize">
