--- a/src/app/components/sidebar/nav/nav.njk
+++ b/src/app/components/sidebar/nav/nav.njk
@@ -1,5 +1,5 @@
     <nav class="menu">
-      <ul class="sidebar-menu metismenu" id="sidebar-menu" data-component="sidebarMenu">
+      <ul class="sidebar-menu metismenu" id="sidebar-menu" {{data.component}}="SidebarMenu">
 
         <li>
           <a href="index.html">
